--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
     </p>
 
     <p>
-      My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies
-      to analyze and interpret biomedical data such as molecular structures.
-      I am particularly interested in <strong>Graph Neural Networks (GNNs)</strong>,
-      <strong>Graph Transformers</strong>, and <strong>Large Language Models (LLMs)</strong>
-      for knowledge discovery.
+      Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea. I’m a member of the Network Science lab led by Professor O-Joun Lee.
     </p>
   </div>
 </div>
 
 <h2>Research Interests</h2>
+My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecular structures.
+I am particularly interested in <strong>Graph Neural Networks (GNNs)</strong>, <strong>Graph Transformers</strong>, and <strong>Large Language Models (LLMs)</strong>
+for knowledge discovery.
 <ul>
   <li>Foundation Models: Pre-training & Adaptation, Self-Supervised Learning</li>
   <li>Graph Learning: Graph Structure Learning, Molecular Learning, Knowledge Graphs</li>
