--- a/index.html
+++ b/index.html
@@ -104,8 +104,6 @@
 
 <!-- HEADER -->
 <div class="header">
-  <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
-
   <div class="header-text">
     <h1>Van Thuy Hoang</h1>
     <p class="subtitle">
@@ -114,10 +112,14 @@
     </p>
 
     <p>
-      Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea. I’m a member of the Network Science lab led by Professor O-Joun Lee.
+      Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea.
+      I’m a member of the Network Science Lab led by Professor O-Joun Lee.
     </p>
   </div>
+
+  <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
 </div>
+
 
 <h2>Research Interests</h2>
 My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecular structures.
