--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
     /* Top links */
     .top-links {
       text-align: center;
-      margin-bottom: 25px;
+      margin-bottom: 10px;
       font-size: 0.95em;
+    }
+
+    /* Horizontal line under top links */
+    .top-divider {
+      border: none;
+      border-top: 1px solid #ddd;
+      margin: 15px 0 30px 0;
     }
 
     /* Header layout */
@@ -102,6 +109,8 @@
   <a href="Curriculum_Vitae_2507.pdf">CV (PDF)</a>
 </div>
 
+<hr class="top-divider">
+
 <!-- HEADER -->
 <div class="header">
   <div class="header-text">
@@ -119,7 +128,6 @@
 
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
 </div>
-
 
 <h2>Research Interests</h2>
 My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecular structures.
