Enhance introduction with links to lab and professor
Updated the introduction paragraph to include links to the Network Science Lab and Professor O-Joun Lee.

--- a/index.html
+++ b/index.html
@@ -120,10 +120,15 @@
       The Catholic University of Korea
     </p>
 
-    <p>
-      Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea.
-      I’m a member of the Network Science Lab led by Professor O-Joun Lee.
-    </p>
+  <p>
+    Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea.
+    I’m a member of the
+    <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>
+    led by
+    <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
+      Professor O-Joun Lee
+    </a>.
+  </p>
   </div>
 
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
