--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
       Professor O-Joun Lee
     </a>.
   </p>
+
+<p>
+  If you would like to contact me or collaborate, please feel free to
+  <a href="mailto:hoangvanthuy90@gmail.com">drop me an email</a>.
+</p>
+    
   </div>
 
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
