--- a/index.html
+++ b/index.html
@@ -141,15 +141,14 @@
 </div>
 
 <h2>Research Interests</h2>
-My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecular structures.
+My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecules.
 I am particularly interested in <strong>Graph Neural Networks (GNNs)</strong>, <strong>Graph Transformers</strong>, and <strong>Large Language Models (LLMs)</strong>
 for knowledge discovery.
 <ul>
-  <li>Foundation Models: Pre-training & Adaptation, Self-Supervised Learning</li>
+  <li>Foundation Models: Pre-training & Adaptation strategies, Self-Supervised Learning</li>
   <li>Graph Learning: Graph Structure Learning, Molecular Learning, Knowledge Graphs</li>
   <li>AI for Bioinformatics: Graph Neural Networks, Graph Transformers</li>
-  <li>Theoretical Foundations: Information Theory, Causal Inference, Multi-view Learning</li>
-  <li>Explainable AI and Fairness Learning</li>
+  <li>Theoretical Foundations: Information Theory, Causal Inference, Multi-view Learning, Explainable AI, Fairness Learning, and Pattern Recognition.</li>
 </ul>
 
 <h2>Selected Publications</h2>
