--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
       text-decoration: underline;
     }
 
-    h1 {
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
+h1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: 400;          /* remove bold */
+  display: inline-block;
+  border-bottom: 2px solid #222;
+  padding-bottom: 2px;
+}
 
     h2 {
       margin-top: 35px;
