Change strong tag to underline for author name

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ for knowledge discovery.
 
 <ul>
   <li>
-    <strong>Van Thuy Hoang</strong>, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Pre-training Graph Neural Networks on Molecules by using Subgraph-conditioned Graph Information Bottleneck.</em>
     In Proceedings of the 39th AAAI Conference on Artificial Intelligence (AAAI 2025).
   </li>
