--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@ for knowledge discovery.
     In Proceedings of the 39th AAAI Conference on Artificial Intelligence (AAAI 2025).
   </li>
   <li>
-    <strong>Van Thuy Hoang</strong>, Hyeon-Ju Jeon, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, Hyeon-Ju Jeon, O-Joun Lee.
     <em>Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.</em>
     IEEE Transactions on Network Science and Engineering (IEEE TNSE 2025).
   </li>
   <li>
-    <strong>Van Thuy Hoang</strong>, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Transitivity-Preserving Graph Representation Learning for Bridging Local Connectivity and Role-based Similarity.</em>
     In Proceedings of the 38th AAAI Conference on Artificial Intelligence (AAAI 2024).
   </li>
@@ -176,27 +176,27 @@ for knowledge discovery.
 <div class="pub-year">2025</div>
 <ol>
   <li>
-    Van Thuy Hoang, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Pre-training Graph Neural Networks on Molecules by using Subgraph-conditioned Graph Information Bottleneck.</em>
     AAAI 2025.
   </li>
   <li>
-    Van Thuy Hoang, Hyeon-Ju Jeon, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, Hyeon-Ju Jeon, O-Joun Lee.
     <em>Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.</em>
     IEEE Transactions on Network Science and Engineering, 2025.
   </li>
   <li>
-    Van Thuy Hoang et al.
+    <span class="underline">Van Thuy Hoang</span> et al.
     <em>Halal or Not: Knowledge Graph Completion for Predicting Cultural Appropriateness of Daily Products.</em>
     IEEE Access, 2025.
   </li>
   <li>
-    Van Thuy Hoang, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Pre-training Graph Neural Networks on 2D and 3D Molecular Structures by using Multi-View Conditional Information Bottleneck.</em>
     Under review.
   </li>
   <li>
-    Van Thuy Hoang, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Context-aware Graph Causality Inference for Few-Shot Molecular Property Prediction.</em>
     Under review.
   </li>
@@ -205,12 +205,12 @@ for knowledge discovery.
 <div class="pub-year">2024</div>
 <ol start="6">
   <li>
-    Van Thuy Hoang, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>Transitivity-Preserving Graph Representation Learning for Bridging Local Connectivity and Role-based Similarity.</em>
     AAAI 2024.
   </li>
   <li>
-    Nam-Gyu Jung, Van Thuy Hoang, O-Joun Lee, Chang Choi.
+    Nam-Gyu Jung, <span class="underline">Van Thuy Hoang</span>, O-Joun Lee, Chang Choi.
     <em>Kiosk Recommendation System based on Self-Supervised Representation Learning of User Behaviors in Offline Retail.</em>
     IEEE Internet of Things Journal, 2024.
   </li>
@@ -219,12 +219,12 @@ for knowledge discovery.
 <div class="pub-year">2023</div>
 <ol start="8">
   <li>
-    Van Thuy Hoang et al.
+    <span class="underline">Van Thuy Hoang</span> et al.
     <em>Companion Animal Disease Diagnostics Based on Literal-Aware Medical Knowledge Graph Representation Learning.</em>
     IEEE Access, 2023.
   </li>
   <li>
-    Van Thuy Hoang et al.
+    <span class="underline">Van Thuy Hoang</span> et al.
     <em>Graph Representation Learning and Its Applications: A Survey.</em>
     Sensors, 2023.
   </li>
@@ -233,12 +233,12 @@ for knowledge discovery.
 <div class="pub-year">2018</div>
 <ol start="10">
   <li>
-    Van Thuy Hoang et al.
+    <span class="underline">Van Thuy Hoang</span> et al.
     <em>Automated Large Program Repair Based on Big Code.</em>
     ISICT 2018.
   </li>
   <li>
-    Ly Vu, Van Thuy Hoang et al.
+    Ly Vu, <span class="underline">Van Thuy Hoang</span> et al.
     <em>Time Series Analysis for Encrypted Traffic Classification: A Deep Learning Approach.</em>
     ISCIT 2018.
   </li>
@@ -247,7 +247,7 @@ for knowledge discovery.
 <div class="pub-year">Preprints</div>
 <ol start="12">
   <li>
-    Van Thuy Hoang, O-Joun Lee.
+    <span class="underline">Van Thuy Hoang</span>, O-Joun Lee.
     <em>A Survey on Structure-Preserving Graph Transformers.</em>
     arXiv:2401.16176.
   </li>
