--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
+.underline {
+  text-decoration: underline;
+}
     h2 {
       margin-top: 35px;
       border-bottom: 1px solid #ddd;
