--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ h1 {
 }
 .highlight {
   font-weight: 600;
-  background-color: #f2f2f2;
-  padding: 2px 6px;
+  background-color: #ffeeba;   /* warm light yellow */
+  padding: 3px 7px;
   border-radius: 4px;
 }
     h2 {
