--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@ h1 {
   </p>
 
 <p>
-  If you would like to contact me or collaborate, please feel free to
-  <a href="mailto:hoangvanthuy90@gmail.com">drop me an email</a>.
+  I am open to research collaboration and academic opportunities.
+  Please feel free to
+  <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
+  if you are interested.
 </p>
     
   </div>
