--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ h1 {
 
 <h2>Research Interests</h2>
 My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecules.
-I am particularly interested in <strong>Graph Neural Networks (GNNs)</strong>, <strong>Graph Transformers</strong>, and <strong>Large Language Models (LLMs)</strong>
+I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs)
 for knowledge discovery.
 
 <h2>Selected Publications</h2>
