--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ My research focuses on <strong>AI for Bioinformatics</strong>, developing strate
 I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs)
 for knowledge discovery.
 
+<h2>Research Philosophy</h2>
+I view Wisdom — not simply Knowledge — as fundamentally relational, emerging from inter-being dependencies rather than static entities. 
+Grounded in Buddhist dependent origination and Christian thought on the Ground of the Soul, this perspective frames reality as an interconnected causal network and guides my research in Fairness Learning, Information Bottleneck, and Causal Inference:
+
+“No central self—only Original Mind, Buddha-nature itself or the Ground of the Soul—flowing through inter-dependent arisings. The nature of reality appears as a causal network.”
+  
 <h2>Selected Publications</h2>
 
 <ul>
