--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@ h1 {
   padding: 3px 7px;
   border-radius: 4px;
 }
+    .note {
+  font-style: italic;
+  color: #555;
+  margin-top: 20px;
+  line-height: 1.6;
+}
     h2 {
       margin-top: 35px;
       border-bottom: 1px solid #ddd;
@@ -159,7 +165,9 @@ for knowledge discovery.
 I view Wisdom — not simply Knowledge — as fundamentally relational, emerging from inter-being dependencies rather than static entities. 
 Grounded in Buddhist dependent origination and Christian thought on the Ground of the Soul, this perspective frames reality as an interconnected causal network and guides my research in Fairness Learning, Information Bottleneck, and Causal Inference:
 
-“There is no central self, only the Original Mind—Buddha-nature or the Ground of the Soul, manifests through a series of interdependent arisings. The nature of reality appears as a causal network.”
+<p class="note">
+There is no central self, only the Original Mind—Buddha-nature or the Ground of the Soul, manifests through a series of interdependent arisings. The nature of reality appears as a causal network.
+  </p>
   
 <h2>Selected Publications</h2>
 
