--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ h1 {
 </div>
 
 <h2>Research Interests</h2>
-My research focuses on <strong>AI for Bioinformatics</strong>, developing strategies to analyze and interpret biomedical data such as molecules.
+My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data, such as molecules.
 I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs)
 for knowledge discovery.
 
