--- a/index.html
+++ b/index.html
@@ -145,10 +145,8 @@ h1 {
   </p>
 
 <p>
-  I am open to research collaboration and academic opportunities.
-  Please feel free to
-  <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
-  if you are interested.
+  I am open to research collaboration and academic opportunities. Please feel free to
+  <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a> if you are interested.
 </p>
     
   </div>
@@ -157,9 +155,8 @@ h1 {
 </div>
 
 <h2>Research Interests</h2>
-My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data, such as molecules.
-I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs)
-for knowledge discovery.
+My research focuses on AI for Bioinformatics, developing Self-Supervised Learning strategies and Foundation Models to analyze and interpret biomedical data, such as molecules. 
+I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
 
 
 <h2>Selected Publications</h2>
