--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ h1 {
 </div>
 
 <h2>Research Interests</h2>
-My research focuses on AI for Bioinformatics, developing Self-Supervised Learning strategies and Foundation Models to analyze and interpret biomedical data, such as molecules. 
-I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
+My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data, such as molecules. 
+  I am particularly interested in Graph Neural Networks (GNNs), Graph Transformers, and Large Language Models (LLMs) for knowledge discovery
 
 
 <h2>Selected Publications</h2>
