--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@ h1 {
   text-underline-offset: 4px;
 }
 .highlight {
-  font-weight: 600;
-  background-color: #ffeeba;   /* warm light yellow */
-  padding: 3px 7px;
+  background-color: #dbeafe;   /* soft academic blue */
+  padding: 2px 6px;
   border-radius: 4px;
+  font-weight: 600;            /* optional: remove if you don’t want bold */
 }
+ 
     .note {
   font-style: italic;
   color: #555;
