Change highlight background color to teal

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h1 {
   text-underline-offset: 4px;
 }
 .highlight {
-  background-color: #dbeafe;   /* soft academic blue */
+  background-color: #009999;   /* soft academic blue */
   padding: 2px 6px;
   border-radius: 4px;
   font-weight: 600;            /* optional: remove if you don’t want bold */
