--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
 </p>
 
-<h2>Selected Publications</h2> <em>Top-tier conferences/journals</em>
+<h2>Selected Publications <em>(Top-tier conferences/journals)</em> </h2> 
 
 <ul>
   <li>
