--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
 </p>
 
-<h2>Selected Publications <em>(Top-tier conferences/journals)</em> </h2> 
+<h2>Selected Publications <span><em>(Top-tier conferences/journals) </em>  </span></h2> 
 
 <ul>
   <li>
