Update heading for selected publications section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       border-radius: 4px;
       font-weight: 600;
     }
+.subtitle-text em {
+  font-style: normal;   /* cancel italics */
+  font-weight: normal;
+  color: #555;
+  font-size: 0.9em;
+}
 
     h2 {
       margin-top: 35px;
@@ -175,7 +181,9 @@
   Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
 </p>
 
-<h2>Selected Publications <span><em>(Top-tier conferences/journals) </em>  </span></h2> 
+<h2>
+  Selected Publications  <span class="subtitle-text">    <em>(Top-tier conferences/journals)</em>  </span>
+</h2>
 
 <ul>
   <li>
