--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret
-  biomedical data, such as molecules. I am particularly interested in GNNs, Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
+  My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).
+  I am particularly interested in GNNs, Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
 </p>
 
 <h2>
