--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       text-decoration: underline;
       text-underline-offset: 4px;
     }
+.red-text {
+  color: #c00000;   /* academic red, not too bright */
+  font-weight: 500; /* optional, remove if you want normal weight */
+}
 
     .highlight {
       background-color: #fe930c;
@@ -152,23 +156,26 @@
       Ph.D. Student in Artificial Intelligence<br>
       The Catholic University of Korea
     </p>
+<p>
+  Hi, I’m Van Thuy Hoang, a PhD Student at the Catholic University of Korea.
+  I’m a member of the
+  <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>
+  led by
+  <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
+    Professor O-Joun Lee
+  </a>.
+  <span class="red-text">
+    I will enter the job market in early 2026 in Vietnam and am seeking lecturer or researcher positions.
+  </span>
+</p>
 
-    <p>
-      Hi, I’m Van Thuy Hoang, a PhD Student of the Catholic University of Korea.
-      I’m a member of the
-      <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>
-      led by
-      <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
-        Professor O-Joun Lee
-      </a>.
-    </p>
+<p>
+  I am open to research collaboration and academic opportunities.
+  Please feel free to
+  <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
+  if you are interested.
+</p>
 
-    <p>
-      I am open to research collaboration and academic opportunities.
-      Please feel free to
-      <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
-      if you are interested.
-    </p>
   </div>
 
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
