--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
   <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
     Professor O-Joun Lee
   </a>.
-  <span class="red-text">
-    I will enter the job market in early 2026 in Vietnam and am seeking lecturer or researcher positions.
-  </span>
+
+</p>
+  <p>  <span class="red-text"> I will enter the job market in early 2026 in Vietnam and am seeking lecturer or researcher positions.  </span>
 </p>
 
 <p>
