--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
   <div class="header-text">
     <h1>Van Thuy Hoang</h1>
     <p class="subtitle">
-      Ph.D. Student in Artificial Intelligence<br>
-      The Catholic University of Korea
+      Ph.D. Student in Artificial Intelligence
     </p>
 <p>
   Hi, I’m Van Thuy Hoang, a PhD Student at the Catholic University of Korea.
@@ -165,16 +164,18 @@
     Professor O-Joun Lee
   </a>.
 
-</p>
-  <p>  <span class="red-text"> I will enter the job market in early 2026 in Vietnam and am seeking lecturer or researcher positions.  </span>
-</p>
-
-<p>
+  <p>
   I am open to research collaboration and academic opportunities.
   Please feel free to
   <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
   if you are interested.
 </p>
+    
+</p>
+  <p>  <span class="red-text"> I will enter the job market in early 2026 in Vietnam and am seeking lecturer or researcher positions.  </span>
+</p>
+
+
 
   </div>
 
