--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </p>
     
 </p>
-  <p>  <span class="red-text"> I will enter the job market in early 2026 and am seeking lecturer or researcher positions.  </span>
+  <p>  <span class="red-text"> I will enter the job market in early 2026 in Vietnam and am seeking Lecturer/Researcher positions.  </span>
 </p>
 
 
