--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <p>
 I view Wisdom - not simply Knowledge – as fundamentally relational, arising from inter-being dependencies rather than static or isolated entities.
 This view is grounded in fundamental theories from both Buddhist insight and Christian thought, seeing all existence flows from and returns to a unifying source. 
-These foundations align deeply with both my theoretical orientation and methodological choices throughout my research, particularly in Fairness Learning, Information Bottleneck, and Causal Inference:
+These foundations align deeply with my theoretical orientation throughout my research, particularly in Fairness Learning and Causal Inference:
  
 </p>
 
