--- a/index.html
+++ b/index.html
@@ -216,16 +216,18 @@
  <h2>Research Philosophy</h2>
 
 <p>
-I view Wisdom - not simply Knowledge – as fundamentally relational, arising from inter-being dependencies rather than static or isolated entities.
+I view Wisdom—not simply Knowledge— as fundamentally relational, arising from inter-being dependencies rather than static or isolated entities.
 This view is grounded in fundamental theories from both Buddhist insight and Christian thought, seeing all existence flows from and returns to a unifying source. 
-These foundations align deeply with my theoretical orientation throughout my research, particularly in Fairness Learning and Causal Inference:
+These foundations align deeply with my theoretical orientation throughout my research, particularly in Information Bottleneck and Causal Inference:
  
 </p>
 
-<p class="note">
-There is no central self—only the Original Mind, Buddha-nature/Ground of the Soul, manifesting through a series of interdependent arisings.  
-Reality thus unfolds as a causal network.
-</p>
+<blockquote class="note">
+There is no central self— only the Original Mind, Buddha-nature/Ground of the Soul- manifesting through a series of interdependent arisings.  
+The nature of reality thus unfolds as a causal network.
+</blockquote>
+  
+
 
   
 </body>
