--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
   color: #c00000;   /* academic red, not too bright */
   font-weight: 500; /* optional, remove if you want normal weight */
 }
+blockquote.note {
+  font-style: italic;
+  color: #555;
+  border-left: 3px solid #ddd;
+  padding-left: 15px;
+  margin: 25px 0;
+}
 
     .highlight {
       background-color: #fe930c;
