--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ These foundations align deeply with my theoretical orientation throughout my res
 
 <blockquote class="note">
 There is no central self— only the Original Mind, Buddha-nature/Ground of the Soul- manifesting through a series of interdependent arisings.  
-The nature of reality thus unfolds as a causal network.
+The nature of reality thus unfolds as an invariant causal network.
 </blockquote>
   
 
