--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ blockquote.note {
   <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>
   led by
   <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
-    Professor O-Joun Lee
+    Prof. O-Joun Lee
   </a>.
 
   <p>
