--- a/index.html
+++ b/index.html
@@ -171,11 +171,9 @@ blockquote.note {
     Prof. O-Joun Lee
   </a>.
 
-  <p>
+<p>
   I am open to research collaboration and academic opportunities.
-  Please feel free to
-  <a href="mailto:hoangvanthuy90@gmail.com">contact me via email</a>
-  if you are interested.
+  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested.
 </p>
     
 </p>
