--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ blockquote.note {
 </p>
     
 </p>
-  <p>  <span class="red-text"> I will enter the job market in 2026 in Vietnam and currently seeking Lecturer/Researcher positions.  </span>
+  <p>  <span class="red-text"> I will enter the job market in 2026 in Vietnam and am seeking Lecturer/Researcher positions.  </span>
 </p>
 
 
