--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).
-  I am particularly interested in GNNs, Graph Transformers, and Large Language Models (LLMs) for knowledge discovery.
+  My research focuses on AI for Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).</br>
+  I am particularly interested in Graph Transformers and Large Language Models for knowledge discovery.
 </p>
 
 <h2>
