--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@ blockquote.note {
   <a href="https://scholar.google.com.vn/citations?user=E7Cc8rAAAAAJ">
     <i class="fa-solid fa-graduation-cap"></i>Google Scholar
   </a> ·
+  <a href="https://hoangvanthuy90.github.io/publications/">
+    <i class="fa-solid fa-book"></i>Publications
+  </a> ·
   <a href="https://github.com/hoangvanthuy90">
     <i class="fa-brands fa-github"></i>GitHub
   </a> ·
