--- a/publications/index.html
+++ b/publications/index.html
@@ -161,6 +161,14 @@
     <span class="venue">Under review, 2025.</span>
   </li>
 
+   <li>
+    <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+    <strong>
+      Context-aware Graph Causality Inference for Few-Shot Molecular Property Prediction.
+    </strong><br>
+    <span class="venue">Under review, 2025.</span>
+  </li>
+  
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     <strong>
