--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ blockquote.note {
 
 <p>
   I am open to research collaboration and academic opportunities.
-  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested.
+  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested (hoangvanthuy90@gmail.com).
 </p>
     
 </p>
