--- a/index.html
+++ b/index.html
@@ -137,23 +137,26 @@ blockquote.note {
 
 <body>
 
-<!-- TOP LINKS -->
-<div class="top-links">
-  <a href="mailto:hoangvanthuy90@gmail.com">
-    <i class="fa-solid fa-envelope"></i>Email
-  </a> ·
-  <a href="https://scholar.google.com.vn/citations?user=E7Cc8rAAAAAJ">
-    <i class="fa-solid fa-graduation-cap"></i>Google Scholar
-  </a> ·
-  <a href="https://hoangvanthuy90.github.io/publications/">
-    <i class="fa-solid fa-book"></i>Publications
-  </a> ·
-  <a href="https://github.com/hoangvanthuy90">
-    <i class="fa-brands fa-github"></i>GitHub
-  </a> ·
-  <a href="Curriculum_Vitae_2507.pdf">
-    <i class="fa-solid fa-file-pdf"></i>CV (PDF)
-  </a>
+<!-- TOP BAR -->
+<div class="top-bar">
+  <div class="site-name">
+    <a href="../index.html">Van Thuy Hoang</a>
+  </div>
+
+  <div class="top-links">
+    <a href="https://scholar.google.com.vn/citations?user=E7Cc8rAAAAAJ">
+      <i class="fa-solid fa-graduation-cap"></i>Google Scholar
+    </a> ·
+    <a href="https://hoangvanthuy90.github.io/publications/">
+      <i class="fa-solid fa-book"></i>Publications
+    </a> ·
+    <a href="https://github.com/hoangvanthuy90">
+      <i class="fa-brands fa-github"></i>GitHub
+    </a> ·
+    <a href="../Curriculum_Vitae_2507.pdf">
+      <i class="fa-solid fa-file-pdf"></i>CV (PDF)
+    </a>
+  </div>
 </div>
 
 <hr class="top-divider">
