--- a/publications/index.html
+++ b/publications/index.html
@@ -79,6 +79,32 @@
       border-top: 1px solid #ddd;
       margin: 15px 0 30px 0;
     }
+    .top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 0.95em;
+}
+
+.site-name a {
+  font-weight: 600;
+  color: #222;
+  text-decoration: none;
+}
+
+.site-name a:hover {
+  text-decoration: underline;
+}
+
+.top-links {
+  text-align: right;
+}
+
+.top-links i {
+  margin-right: 4px;
+  color: #555;
+}
   </style>
 </head>
 
