--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@ blockquote.note {
       font-weight: bold;
       margin-top: 15px;
     }
+    .top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 0.95em;
+}
+
+.site-name a {
+  font-weight: 600;
+  color: #222;
+  text-decoration: none;
+}
+
+.site-name a:hover {
+  text-decoration: underline;
+}
+
+.top-links {
+  text-align: right;
+}
+
+.top-links i {
+  margin-right: 4px;
+  color: #555;
+}
 
     @media (max-width: 700px) {
       .header {
