--- a/publications/index.html
+++ b/publications/index.html
@@ -89,9 +89,11 @@
 
 .site-name a {
   font-weight: 600;
+  font-size: 1.15em;   /* increase name size */
   color: #222;
   text-decoration: none;
 }
+
 
 .site-name a:hover {
   text-decoration: underline;
