--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ blockquote.note {
 
 .site-name a {
   font-weight: 600;
+  font-size: 1.15em;   /* increase name size */
   color: #222;
   text-decoration: none;
 }
