--- a/publications/index.html
+++ b/publications/index.html
@@ -269,6 +269,27 @@
       and Information Technologies (ISCIT 2018).
     </span>
   </li>
+
+  <li>
+  <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+  <strong>
+    A Survey on Structure-Preserving Graph Transformers.
+  </strong><br>
+  <span class="venue">
+    arXiv preprint, January 2024. arXiv:2401.16176.
+  </span>
+</li>
+
+<li>
+  Thanh Sang Nguyen, Jooho Lee, <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+  <strong>
+    Connector 0.5: A Unified Framework for Graph Representation Learning.
+  </strong><br>
+  <span class="venue">
+    arXiv preprint, April 2023. arXiv:2304.13195.
+  </span>
+</li>
+
 </ol>
 
 </body>
