--- a/publications/index.html
+++ b/publications/index.html
@@ -145,14 +145,12 @@
   </a>.
 </p>
 
-<h2>Full Publications</h2>
+  <h2>Full Publications</h2>
 
 <ol>
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    <strong>
-      Pre-training Graph Neural Networks on Molecules by using Subgraph-conditioned Graph Information Bottleneck.
-    </strong><br>
+    Pre-training Graph Neural Networks on Molecules by using Subgraph-conditioned Graph Information Bottleneck.<br>
     <span class="venue">
       In Proceedings of the 39th AAAI Conference on Artificial Intelligence (AAAI 2025).
     </span>
@@ -160,23 +158,18 @@
 
   <li>
     <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, O-Joun Lee.<br>
-    <strong>
-      Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.
-    </strong><br>
+    Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.<br>
     <span class="venue">
       IEEE Transactions on Network Science &amp; Engineering, 2025.
     </span>
- 
   </li>
 
   <li>
     <span class="author">Van Thuy Hoang</span>, Tien-Bach-Thanh Do, Jinho Seo,
     Seung Charlie Kim, Luong Vuong Nguyen, Duong Nguyen Minh Huy,
     Hyeon-Ju Jeon, O-Joun Lee.<br>
-    <strong>
-      Halal or Not: Knowledge Graph Completion for Predicting Cultural
-      Appropriateness of Daily Products.
-    </strong><br>
+    Halal or Not: Knowledge Graph Completion for Predicting Cultural
+    Appropriateness of Daily Products.<br>
     <span class="venue">
       IEEE Access, 2025.
     </span>
@@ -184,27 +177,21 @@
 
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    <strong>
-      Pre-training Graph Neural Networks on 2D and 3D Molecular Structures
-      by using Multi-View Conditional Information Bottleneck.
-    </strong><br>
+    Pre-training Graph Neural Networks on 2D and 3D Molecular Structures
+    by using Multi-View Conditional Information Bottleneck.<br>
     <span class="venue">Under review, 2025.</span>
   </li>
 
-   <li>
-    <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    <strong>
-      Context-aware Graph Causality Inference for Few-Shot Molecular Property Prediction.
-    </strong><br>
-    <span class="venue">Under review, 2025.</span>
-  </li>
-  
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    <strong>
-      Transitivity-Preserving Graph Representation Learning for Bridging
-      Local Connectivity and Role-based Similarity.
-    </strong><br>
+    Context-aware Graph Causality Inference for Few-Shot Molecular Property Prediction.<br>
+    <span class="venue">Under review, 2025.</span>
+  </li>
+
+  <li>
+    <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+    Transitivity-Preserving Graph Representation Learning for Bridging
+    Local Connectivity and Role-based Similarity.<br>
     <span class="venue">
       In Proceedings of the 38th AAAI Conference on Artificial Intelligence (AAAI 2024).
     </span>
@@ -212,23 +199,18 @@
 
   <li>
     Nam-Gyu Jung, <span class="author">Van Thuy Hoang</span>, O-Joun Lee, Chang Choi.<br>
-    <strong>
-      Kiosk Recommend System based on Self-Supervised Representation
-      Learning of User Behaviors in Offline Retail.
-    </strong><br>
+    Kiosk Recommend System based on Self-Supervised Representation
+    Learning of User Behaviors in Offline Retail.<br>
     <span class="venue">
       IEEE Internet of Things Journal, February 2024.
     </span>
-     
   </li>
 
   <li>
     <span class="author">Van Thuy Hoang</span>, T. S. Nguyen, S. Lee, J. Lee,
     L. V. Nguyen, O.-J. Lee.<br>
-    <strong>
-      Companion Animal Disease Diagnostics Based on Literal-Aware Medical
-      Knowledge Graph Representation Learning.
-    </strong><br>
+    Companion Animal Disease Diagnostics Based on Literal-Aware Medical
+    Knowledge Graph Representation Learning.<br>
     <span class="venue">
       IEEE Access, 2023.
     </span>
@@ -237,9 +219,7 @@
   <li>
     <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, Eun-Soon You,
     Y. W. Yoon, Sungyeop Jung, O-Joun Lee.<br>
-    <strong>
-      Graph Representation Learning and Its Applications: A Survey.
-    </strong><br>
+    Graph Representation Learning and Its Applications: A Survey.<br>
     <span class="venue">
       Sensors, 2023.
     </span>
@@ -248,9 +228,7 @@
   <li>
     <span class="author">Van Thuy Hoang</span>, Phan Viet Anh,
     Nguyen Xuan Hoai.<br>
-    <strong>
-      Automated Large Program Repair Based on Big Code.
-    </strong><br>
+    Automated Large Program Repair Based on Big Code.<br>
     <span class="venue">
       In Proceedings of the 9th International Symposium on Information
       and Communication Technology (ISICT 2018).
@@ -260,10 +238,8 @@
   <li>
     Ly Vu, <span class="author">Van Thuy Hoang</span>, Uy Nguyen, Tran Ngoc,
     Diep Nguyen, Hoang Dinh, Eryk Dutkiewicz.<br>
-    <strong>
-      Time Series Analysis for Encrypted Traffic Classification:
-      A Deep Learning Approach.
-    </strong><br>
+    Time Series Analysis for Encrypted Traffic Classification:
+    A Deep Learning Approach.<br>
     <span class="venue">
       In Proceedings of the 18th International Symposium on Communications
       and Information Technologies (ISCIT 2018).
@@ -271,26 +247,20 @@
   </li>
 
   <li>
-  <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-  <strong>
-    A Survey on Structure-Preserving Graph Transformers.
-  </strong><br>
-  <span class="venue">
-    arXiv preprint, January 2024. arXiv:2401.16176.
-  </span>
-</li>
+    <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+    A Survey on Structure-Preserving Graph Transformers.<br>
+    <span class="venue">
+      arXiv preprint, January 2024. arXiv:2401.16176.
+    </span>
+  </li>
 
-<li>
-  Thanh Sang Nguyen, Jooho Lee, <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-  <strong>
-    Connector 0.5: A Unified Framework for Graph Representation Learning.
-  </strong><br>
-  <span class="venue">
-    arXiv preprint, April 2023. arXiv:2304.13195.
-  </span>
-</li>
+  <li>
+    Thanh Sang Nguyen, Jooho Lee, <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
+    Connector 0.5: A Unified Framework for Graph Representation Learning.<br>
+    <span class="venue">
+      arXiv preprint, April 2023. arXiv:2304.13195.
+    </span>
 
-</ol>
 
 </body>
 </html>
